--- a/MyLeasing.Web/appsettings.json
+++ b/MyLeasing.Web/appsettings.json
@@ -7,6 +7,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=MyLeasing;Integrated Security=True;MultipleActiveResultSets=True"
+  },
+  "Tokens": {
+    "Key": "asdfghjikEanesmiHijoVaron123456bnvcgfdsrtfyhgcvgfxdgc",
+    "Issuer": "localhost",
+    "Audience": "users"
   }
-
 }
