--- a/MyLeasing.Prism/MyLeasing.Prism.iOS/MyLeasing.Prism.iOS.csproj
+++ b/MyLeasing.Prism/MyLeasing.Prism.iOS/MyLeasing.Prism.iOS.csproj
@@ -192,7 +192,10 @@
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
   </ItemGroup>
   <ItemGroup>
