--- a/MyLeasing.Prism/MyLeasing.Prism/MyLeasing.Prism.csproj
+++ b/MyLeasing.Prism/MyLeasing.Prism/MyLeasing.Prism.csproj
@@ -6,7 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
-    <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
   </ItemGroup>
 
